refactor: 불필요한 @Autowired·Javadoc 제거, HttpStatus 상수·toList() 전환
- 단일 생성자 클래스의 @Autowired 제거
- @author/@since Javadoc 주석 제거
- 매직 넘버 status(401/403)를 HttpStatus 상수로 치환
- Collectors.toList()를 Stream.toList()로 전환