@@ -14,7 +14,7 @@ import org.springframework.web.bind.annotation.RestController;
 import java.net.URI;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
+
 
 /*
  * Each product must have at least one option at all times.
@@ -34,7 +34,7 @@ public class OptionController {
         try {
             List<OptionResponse> options = optionService.findByProductId(productId).stream()
                 .map(OptionResponse::from)
-                .collect(Collectors.toList());
+                .toList();
             return ResponseEntity.ok(options);
         } catch (NoSuchElementException e) {
             return ResponseEntity.notFound().build();
